--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ allow-direct-references = true
 
 [tool.hatch.version]
 source = "vcs"
-raw-options = { version_scheme = "no-guess-dev" }
+version_scheme = "standard"
 
 [tool.hatch.build.hooks.vcs]
 version-file = "affetch/_version.py"
